--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
 
   <header class="container-fluid">
     <section class="row justify-content-center">
-      <div class="col-6">
-        <h1>Welcome to the Plant Tracker</h1>
+      <div class="col">
+        <img src="public\images\logo.png" alt="Girl in a jacket">
       </div>
     </section>
   </header>
 
   <main>
     <aside>
-      <h2></h2>
+      <a href=""></a>
     </aside>
     <div>
       <!-- {{{body}}} -->
