update to html and saved it to main.handle

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/">Plant Bar</a>
+      <a class="navbar-brand" href="/">&#127793;
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
         aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -43,20 +44,42 @@
 
   <header class="container-fluid">
     <section class="row justify-content-center">
-      <div class="col">
-        <img src="public\images\logo.png" alt="Girl in a jacket">
+      <div class="text-center">
+        <img src="public\images\logo.png" class="img-fluid" alt="plant tracker logo">
       </div>
     </section>
   </header>
 
   <main>
-    <aside>
-      <a href=""></a>
-    </aside>
-    <div>
-      <!-- {{{body}}} -->
+    <section class="row justify-content-center">
+    <div class="card col-3">
+     <img src="public\images\img300placeholder.png" class="img-fluid p-2 imgSize" alt="placeholder">
+     <h2></h2>
     </div>
-  </main>
+    <div class="card col-3">
+      <img src="public\images\img300placeholder.png" class="img-fluid p-2 imgSize" alt="placeholder">
+      <h2</h2>
+    </div>
+    <div class="card col-3">
+      <img src="public\images\img300placeholder.png" class="img-fluid p-2 imgSize" alt="placeholder">
+      <h2></h2>
+    </div>
+  </section>
+    <section class="row justify-content-center">
+    <div class="card col-3">
+      <img src="public\images\img300placeholder.png" class="img-fluid p-2 imgSize" alt="placeholder">
+      <h2></h2>
+    </div>
+    <div class="card col-3">
+      <img src="public\images\img300placeholder.png" class="img-fluid p-2 imgSize" alt="placeholder">
+      <h2></h2>
+    </div>
+    <div class="card col-3">
+      <img src="public\images\img300placeholder.png" class="img-fluid p-2 imgSize" alt="placeholder">
+      <h2></h2>
+    </div>
+  </section>
+</main>
 </body>
 
 </html>
